# rust-ledger

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
implementors/bitflags/traits/: trait.Flags.js  trait.PublicFlags.js
implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/encdec_base/: trait.EncDec.js
implementors/encdec_base/decode/: trait.Decode.js
implementors/encdec_base/encode/: trait.Encode.js
implementors/ledger_lib/device/: trait.Device.js
implementors/ledger_sim/drivers/: trait.Driver.js
implementors/num_enum/: trait.TryFromPrimitive.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/strum/: trait.VariantNames.js
ledger_cli/: all.html  enum.Command.html  fn.connect.html  fn.main.html  fn.u8_parse_maybe_hex.html  index.html  sidebar-items.js  struct.ApduData.html  struct.Args.html
ledger_lib/: all.html  constant.DEFAULT_TIMEOUT.html  enum.Error.html  enum.Filters.html  fn.launch_app.html  index.html  sidebar-items.js  struct.LaunchAppOpts.html  struct.LedgerHandle.html  struct.LedgerProvider.html  trait.Device.html  trait.Exchange.html
ledger_lib/device/: trait.Device.html
ledger_lib/error/: enum.Error.html
ledger_lib/info/: enum.ConnInfo.html  enum.ConnType.html  enum.Model.html  index.html  sidebar-items.js  struct.AppInfo.html  struct.DeviceInfo.html  struct.LedgerInfo.html
ledger_lib/provider/: struct.LedgerHandle.html  struct.LedgerProvider.html
ledger_lib/transport/: enum.GenericDevice.html  index.html  sidebar-items.js  struct.BleDevice.html  struct.BleInfo.html  struct.BleTransport.html  struct.GenericTransport.html  struct.TcpDevice.html  struct.TcpInfo.html  struct.TcpTransport.html  struct.UsbDevice.html  struct.UsbInfo.html  struct.UsbTransport.html  trait.Transport.html
ledger_lib/transport/ble/: struct.BleDevice.html  struct.BleInfo.html  struct.BleTransport.html
ledger_lib/transport/tcp/: struct.TcpDevice.html  struct.TcpInfo.html  struct.TcpTransport.html
ledger_lib/transport/usb/: struct.UsbDevice.html  struct.UsbInfo.html  struct.UsbTransport.html
ledger_proto/: all.html  derive.Decode.html  derive.DecodeOwned.html  derive.Encode.html  enum.ApduError.html  enum.StatusCode.html  index.html  sidebar-items.js  struct.ApduHeader.html  struct.GenericApdu.html  trait.ApduBase.html  trait.ApduReq.html  trait.ApduStatic.html  trait.Decode.html  trait.DecodeOwned.html  trait.EncDec.html  trait.Encode.html
ledger_proto/apdus/: index.html  sidebar-items.js  struct.AppFlags.html  struct.AppInfoReq.html  struct.AppInfoResp.html  struct.DeviceInfoReq.html  struct.DeviceInfoResp.html  struct.ExitAppReq.html  struct.RunAppReq.html
ledger_proto/apdus/app_info/: struct.AppFlags.html  struct.AppInfoReq.html  struct.AppInfoResp.html
ledger_proto/apdus/device_info/: struct.DeviceInfoReq.html  struct.DeviceInfoResp.html
ledger_proto/apdus/exit_app/: struct.ExitAppReq.html
ledger_proto/apdus/run_app/: struct.RunAppReq.html
ledger_proto/error/: enum.ApduError.html
ledger_proto/status/: enum.StatusCode.html
ledger_sim/: all.html  enum.Action.html  enum.Button.html  enum.Display.html  enum.DriverMode.html  enum.GenericDriver.html  enum.GenericHandle.html  enum.Model.html  index.html  sidebar-items.js  struct.DockerDriver.html  struct.DockerHandle.html  struct.LocalDriver.html  struct.LocalHandle.html  struct.Options.html  trait.Driver.html  trait.Handle.html
ledger_sim/drivers/: enum.DriverMode.html  enum.GenericDriver.html  enum.GenericHandle.html  trait.Driver.html
ledger_sim/drivers/docker/: struct.DockerDriver.html  struct.DockerHandle.html
ledger_sim/drivers/local/: struct.LocalDriver.html  struct.LocalHandle.html
ledger_sim/handle/: enum.Action.html  enum.Button.html  trait.Handle.html
lib/: Cargo.toml
lib/src/: device.rs  error.rs  info.rs  lib.rs
lib/src/provider/: context.rs  mod.rs
lib/src/transport/: ble.rs  mod.rs  tcp.rs  usb.rs
proto/: Cargo.toml
proto/src/: error.rs  lib.rs  status.rs
proto/src/apdus/: app_info.rs  app_list.rs  device_info.rs  exit_app.rs  mod.rs  run_app.rs
search.desc/ledger_cli/: ledger_cli-desc-0-.js
search.desc/ledger_lib/: ledger_lib-desc-0-.js
search.desc/ledger_proto/: ledger_proto-desc-0-.js
search.desc/ledger_sim/: ledger_sim-desc-0-.js
sim/: Cargo.toml
sim/src/: handle.rs  lib.rs  main.rs
sim/src/drivers/: docker.rs  local.rs  mod.rs
src/ledger_cli/: main.rs.html
src/ledger_lib/: device.rs.html  error.rs.html  info.rs.html  lib.rs.html
src/ledger_lib/provider/: context.rs.html  mod.rs.html
src/ledger_lib/transport/: ble.rs.html  mod.rs.html  tcp.rs.html  usb.rs.html
src/ledger_proto/: error.rs.html  lib.rs.html  status.rs.html
src/ledger_proto/apdus/: app_info.rs.html  device_info.rs.html  exit_app.rs.html  mod.rs.html  run_app.rs.html
src/ledger_sim/: handle.rs.html  lib.rs.html
src/ledger_sim/drivers/: docker.rs.html  local.rs.html  mod.rs.html
trait.impl/bitflags/traits/: trait.Flags.js  trait.PublicFlags.js
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/ledger_proto/: trait.ApduStatic.js
trait.impl/num_enum/: trait.TryFromPrimitive.js
trait.impl/strum/: trait.VariantNames.js
(+57 files in other folders)
