[package]
name = "ledger-cli"
description = "Ledger hardware wallet command line interface"
repository = "https://github.com/ledger-community/rust-ledger.git"
keywords = [ "ledger", "wallet", "cli" ]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
provider = []

default = [ "provider" ]

[dependencies]
clap = { version = "4.2.2", features = [ "derive" ] }
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.27.0", features = ["full"] }
time = { version = "0.3.21", features = [ "macros" ] }
humantime = "2.1.0"
hex = "0.4.3"

ledger-lib = { version =  "0.1.0", features = [ "clap" ] }
ledger-proto = { version = "0.1.0" }
