[package]
name = "ledger-lib"
description = "Communication library for Ledger hardware wallets"
repository = "https://github.com/ledger-community/rust-ledger.git"
keywords = [ "ledger", "wallet", "usb", "hid", "bluetooth" ]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
# Select enabled transports
transport_usb = [ "hidapi" ]
transport_tcp = []
transport_ble = [ "btleplug" ]

# Switch libusb backends, `libusb` works better with WSL so we're using that by default
transport_usb_libusb = [ "hidapi/linux-static-libusb" ]
transport_usb_hidraw = [ "hidapi/linux-static-hidraw" ]

# Enable `clap` attributes on exported objects
clap = [ "dep:clap" ]

# enable `async_fn_in_trait` nightly feature, removes need for `async_trait` macros
unstable_async_trait = []

default = [ "transport_usb", "transport_tcp", "transport_ble", "transport_usb_libusb" ]

[dependencies]

thiserror = "1.0.40"
encdec = "0.9.0"
ledger-proto = { version = "0.1.0", default-features = false, features = [ "std" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
once_cell = "1.17.1"
uuid = "1.3.2"
futures = "0.3.28"
async-trait = "0.1.68"
displaydoc = "0.2.4"

clap = { version = "4.2.2", optional = true }
hidapi = { version = "2.1.2", optional = true, default-features = false }
btleplug = { version = "0.10.5", optional = true }


[dev-dependencies]
anyhow = "1.0.71"
