[package]
name = "ledger-proto"
description = "Ledger hardware wallet protocol / APDU definitions"
repository = "https://github.com/ledger-community/rust-ledger.git"
keywords = [ "ledger", "protocol", "apdu" ]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
# `std` feature implements `std::error::Error` for `ApduError` type
std = [ "dep:thiserror", "alloc" ]
# `alloc` feature gates `Vec` based types
alloc = []
# `serde` feature enables object serialisation and deserialisation
serde = [ "dep:serde", "dep:hex", "bitflags/serde" ]

default = [ "std", "serde" ]

[dependencies]
encdec = { version = "0.10", default-features = false }
bitflags = { version = "2.1", default-features = false }
displaydoc = { version = "0.2", default-features = false }
num_enum = { version = "0.7", default-features = false }

serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", features = ["serde"], optional = true }
thiserror = { version = "2.0", optional = true }
