[package]
name = "ledger-sim"
description = "A Rust wrapper for the Ledger Speculos Simulator"
repository = "https://github.com/ledger-community/rust-ledger.git"
keywords = [ "ledger", "hardware", "wallet", "speculos", "simulator" ]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bytes = "1.2"
strum = { version = "0.26", features = [ "derive" ] }
anyhow = "1.0"
clap = { version = "4.3", features = [ "derive", "env" ] }
tokio = { version = "1.20", features = [ "full" ] }
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bollard = "0.18"
async-trait = "0.1"
futures = "0.3"
tar = "0.4"
reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
serde = "1.0"
serde_json = "1.0"
image = "0.25"

[dev-dependencies]
ledger-lib = "0.1"
ledger-proto = "0.1"
